<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="best_tracker">Пожалуй лучший\nфитнес трекер в ДВФУ</string>
    <string name="made_of">Созданный студентами 2-го курса</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="register_text">Регистрация</string>
    <string name="login_input">Логин</string>
    <string name="name_input">Имя или Никнейм</string>
    <string name="password_input">Пароль</string>
    <string name="repeat_password_input">Повторите пароль</string>
    <string name="sex">Пол</string>
    <string name="continue_btn">Продолжить</string>
    <string name="privacy_policy">Нажимая на кнопку, вы соглашаетесь с\n
        политикой конфиденциальности и обработки\n
        персоональных данных, а также принимаете\n
        пользовательское соглашение</string>
    <string name="auth_text">Войти</string>
    <string name="bickers">Велосипедисты</string>
    <string name="profile">Профиль</string>
    <string name="activity">Активность</string>
    <string name="activity_type_icon">Иконка типа активности</string>
    <string name="activity_duration_format">%d мин</string>
    <string name="activity_distance_format">%.1f км</string>
    <string name="no_activity_data">Нет данных активности</string>
    <string name="activity_history_title">История активностей</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>