<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="16dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/black" />

    <ScrollView
        android:id="@+id/allInputs"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/registerText"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/login_input"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="#e9e9eb"
                android:textColorHint="#818186"
                app:hintTextColor="#818186">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/name_input"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="#e9e9eb"
                android:layout_marginTop="16dp"
                android:textColorHint="#818186"
                app:hintTextColor="#818186">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/password_input"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="#e9e9eb"
                android:layout_marginTop="16dp"
                android:textColorHint="#818186"
                app:hintTextColor="#818186"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/repeat_password_input"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="#e9e9eb"
                android:layout_marginTop="16dp"
                android:textColorHint="#818186"
                app:hintTextColor="#818186"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:hint="@string/sex"
                app:boxBackgroundMode="filled"
                app:boxStrokeWidth="0dp"
                app:boxStrokeColor="@android:color/transparent"
                app:boxBackgroundColor="#e9e9eb"
                android:layout_marginTop="16dp"
                android:textColorHint="#818186"
                app:hintTextColor="#818186">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/allInputs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        app:cornerRadius="10dp"
        android:backgroundTint="#007AFF"
        android:paddingHorizontal="102dp"
        android:paddingVertical="14dp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/continueBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="#8a8a8e"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_12"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/privacyPolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />



</androidx.constraintlayout.widget.ConstraintLayout>