<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/waveImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/group_49"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/group_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waveImg"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/activity"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/bestTracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/best_tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <TextView
        android:id="@+id/madeOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/made_of"
        app:layout_constraintTop_toBottomOf="@+id/bestTracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="#3C3C4399"
        android:fontFamily="sans-serif" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/madeOf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        app:cornerRadius="10dp"
        android:backgroundTint="#007AFF"
        android:paddingHorizontal="68dp"
        android:paddingVertical="14dp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/haveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/already_have_an_account"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        android:layout_marginTop="30dp"
        android:textColor="#007AFF"
        android:textSize="17sp"
        android:textStyle="bold" />





</androidx.constraintlayout.widget.ConstraintLayout>